add query functionality